source/parser.output
Terminals unused in grammar

    TOKEN_ERROR


State 30 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 78 conflicts: 2 shift/reduce
State 82 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 199 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ext_decl
    2        | program ext_decl
    3        | TOKEN_MOD TOKEN_MOD test_program
    4        | TOKEN_EOF

    5 test_program: stmt
    6             | ext_decl

    7 decl: name TOKEN_COLON type TOKEN_SEMI
    8     | name TOKEN_COLON type TOKEN_ASSIGN init TOKEN_SEMI

    9 init: TOKEN_LCURL init_list TOKEN_RCURL
   10     | expr

   11 init_list: init
   12          | init_list TOKEN_COMMA init

   13 name: TOKEN_IDENT
   14     | TOKEN_LPAR name TOKEN_RPAR

   15 ext_decl: decl
   16         | function_decl

   17 stmt: print_stmt
   18     | expr_stmt
   19     | iter_stmt
   20     | jump_stmt
   21     | block_stmt
   22     | select_stmt

   23 print_stmt: TOKEN_PRINT expr TOKEN_SEMI

   24 expr_stmt: expr TOKEN_SEMI

   25 expr: assign_expr
   26     | expr TOKEN_COMMA assign_expr

   27 assign_expr: lor_expr
   28            | unary_expr TOKEN_ASSIGN assign_expr

   29 unary_expr: postfix_expr
   30           | TOKEN_ADD unary_expr
   31           | TOKEN_NOT unary_expr
   32           | TOKEN_SUB unary_expr

   33 postfix_expr: primary_expr
   34             | postfix_expr TOKEN_LPAR expr TOKEN_RPAR
   35             | postfix_expr TOKEN_INC
   36             | postfix_expr TOKEN_DEC

   37 primary_expr: primitive
   38             | TOKEN_LPAR expr TOKEN_RPAR
   39             | lvalue

   40 primitive: TOKEN_BOOL
   41          | TOKEN_CH
   42          | TOKEN_NUMBER
   43          | TOKEN_STR

   44 lvalue: name suffix

   45 suffix: call_suffix
   46       | subscript_list
   47       | %empty

   48 call_suffix: TOKEN_LPAR TOKEN_RPAR
   49            | TOKEN_LPAR expr TOKEN_RPAR

   50 subscript_list: subscript
   51               | subscript subscript_list

   52 subscript: TOKEN_LBRACK assign_expr TOKEN_RBRACK

   53 lor_expr: land_expr
   54         | lor_expr TOKEN_OR land_expr

   55 land_expr: eq_expr
   56          | land_expr TOKEN_AND eq_expr

   57 eq_expr: rel_expr
   58        | eq_expr TOKEN_EQ rel_expr
   59        | eq_expr TOKEN_NEQ rel_expr

   60 rel_expr: add_expr
   61         | rel_expr TOKEN_LESS add_expr
   62         | rel_expr TOKEN_GREAT add_expr
   63         | rel_expr TOKEN_LEQ add_expr
   64         | rel_expr TOKEN_GEQ add_expr

   65 add_expr: mult_expr
   66         | add_expr TOKEN_ADD mult_expr
   67         | add_expr TOKEN_SUB mult_expr

   68 mult_expr: exp_expr
   69          | mult_expr TOKEN_MULT exp_expr
   70          | mult_expr TOKEN_DIV exp_expr
   71          | mult_expr TOKEN_MOD exp_expr

   72 exp_expr: unary_expr
   73         | unary_expr TOKEN_EXP exp_expr

   74 select_stmt: TOKEN_IF TOKEN_LPAR expr TOKEN_RPAR stmt
   75            | TOKEN_IF TOKEN_LPAR expr TOKEN_RPAR stmt TOKEN_ELSE stmt

   76 iter_stmt: TOKEN_WHILE TOKEN_LPAR expr TOKEN_RPAR stmt
   77          | TOKEN_FOR TOKEN_LPAR TOKEN_SEMI TOKEN_SEMI TOKEN_RPAR stmt
   78          | TOKEN_FOR TOKEN_LPAR TOKEN_SEMI TOKEN_SEMI expr TOKEN_RPAR stmt
   79          | TOKEN_FOR TOKEN_LPAR TOKEN_SEMI expr_stmt TOKEN_RPAR stmt
   80          | TOKEN_FOR TOKEN_LPAR TOKEN_SEMI expr_stmt expr TOKEN_RPAR stmt
   81          | TOKEN_FOR TOKEN_LPAR expr_stmt TOKEN_SEMI TOKEN_RPAR stmt
   82          | TOKEN_FOR TOKEN_LPAR expr_stmt TOKEN_SEMI expr TOKEN_RPAR stmt
   83          | TOKEN_FOR TOKEN_LPAR expr_stmt expr_stmt TOKEN_RPAR stmt
   84          | TOKEN_FOR TOKEN_LPAR expr_stmt expr_stmt expr TOKEN_RPAR stmt
   85          | TOKEN_FOR TOKEN_LPAR decl TOKEN_SEMI TOKEN_RPAR stmt
   86          | TOKEN_FOR TOKEN_LPAR decl TOKEN_SEMI expr TOKEN_RPAR stmt
   87          | TOKEN_FOR TOKEN_LPAR decl expr_stmt TOKEN_RPAR stmt
   88          | TOKEN_FOR TOKEN_LPAR decl expr_stmt expr TOKEN_RPAR stmt

   89 jump_stmt: TOKEN_RETURN TOKEN_SEMI
   90          | TOKEN_RETURN expr TOKEN_SEMI

   91 block_stmt: TOKEN_LCURL TOKEN_RCURL
   92           | TOKEN_LCURL block_list TOKEN_RCURL

   93 block_list: block
   94           | block_list block

   95 block: decl
   96      | stmt

   97 function_decl: name TOKEN_COLON ret_type TOKEN_LPAR param_list TOKEN_RPAR TOKEN_SEMI
   98              | name TOKEN_COLON ret_type TOKEN_LPAR param_list TOKEN_RPAR TOKEN_ASSIGN block_stmt

   99 param_list: params
  100           | TOKEN_VOID
  101           | %empty

  102 params: param TOKEN_COMMA params
  103       | param

  104 param: name TOKEN_COLON param_type

  105 param_type: type
  106           | function_type

  107 type: primitive_type
  108     | array_list array_type
  109     | TOKEN_AUTO

  110 function_type: TOKEN_FUNCTION ret_type

  111 array_type: primitive_type
  112           | function_type

  113 primitive_type: TOKEN_BOOLEAN
  114               | TOKEN_CHAR
  115               | TOKEN_INTEGER
  116               | TOKEN_STRING

  117 ret_type: primitive_type
  118         | TOKEN_VOID
  119         | array_list array_type
  120         | function_type

  121 array_list: array
  122           | array_list array

  123 array: TOKEN_ARRAY TOKEN_LBRACK assign_expr TOKEN_RBRACK
  124      | TOKEN_ARRAY TOKEN_LBRACK TOKEN_RBRACK


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_ERROR (258)
    TOKEN_EOF (259) 4
    TOKEN_ARRAY (260) 123 124
    TOKEN_AUTO (261) 109
    TOKEN_BOOLEAN (262) 113
    TOKEN_CHAR (263) 114
    TOKEN_ELSE (264) 75
    TOKEN_FOR (265) 77 78 79 80 81 82 83 84 85 86 87 88
    TOKEN_FUNCTION (266) 110
    TOKEN_IF (267) 74 75
    TOKEN_INTEGER (268) 115
    TOKEN_PRINT (269) 23
    TOKEN_RETURN (270) 89 90
    TOKEN_STRING (271) 116
    TOKEN_VOID (272) 100 118
    TOKEN_WHILE (273) 76
    TOKEN_IDENT (274) 13
    TOKEN_BOOL (275) 40
    TOKEN_NUMBER (276) 42
    TOKEN_STR (277) 43
    TOKEN_CH (278) 41
    TOKEN_INC (279) 35
    TOKEN_DEC (280) 36
    TOKEN_SUB (281) 32 67
    TOKEN_EXP (282) 73
    TOKEN_NOT (283) 31
    TOKEN_MULT (284) 69
    TOKEN_DIV (285) 70
    TOKEN_MOD (286) 3 71
    TOKEN_ADD (287) 30 66
    TOKEN_LEQ (288) 63
    TOKEN_LESS (289) 61
    TOKEN_GEQ (290) 64
    TOKEN_GREAT (291) 62
    TOKEN_EQ (292) 58
    TOKEN_NEQ (293) 59
    TOKEN_AND (294) 56
    TOKEN_OR (295) 54
    TOKEN_ASSIGN (296) 8 28 98
    TOKEN_LBRACK (297) 52 123 124
    TOKEN_RBRACK (298) 52 123 124
    TOKEN_LPAR (299) 14 34 38 48 49 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 97 98
    TOKEN_RPAR (300) 14 34 38 48 49 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 97 98
    TOKEN_LCURL (301) 9 91 92
    TOKEN_RCURL (302) 9 91 92
    TOKEN_COLON (303) 7 8 97 98 104
    TOKEN_SEMI (304) 7 8 23 24 77 78 79 80 81 82 85 86 89 90 97
    TOKEN_COMMA (305) 12 26 102


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program (52)
        on left: 1 2 3 4
        on right: 0 2
    test_program (53)
        on left: 5 6
        on right: 3
    decl (54)
        on left: 7 8
        on right: 15 85 86 87 88 95
    init (55)
        on left: 9 10
        on right: 8 11 12
    init_list (56)
        on left: 11 12
        on right: 9 12
    name (57)
        on left: 13 14
        on right: 7 8 14 44 97 98 104
    ext_decl (58)
        on left: 15 16
        on right: 1 2 6
    stmt (59)
        on left: 17 18 19 20 21 22
        on right: 5 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 96
    print_stmt (60)
        on left: 23
        on right: 17
    expr_stmt (61)
        on left: 24
        on right: 18 79 80 81 82 83 84 87 88
    expr (62)
        on left: 25 26
        on right: 10 23 24 26 34 38 49 74 75 76 78 80 82 84 86 88 90
    assign_expr (63)
        on left: 27 28
        on right: 25 26 28 52 123
    unary_expr (64)
        on left: 29 30 31 32
        on right: 28 30 31 32 72 73
    postfix_expr (65)
        on left: 33 34 35 36
        on right: 29 34 35 36
    primary_expr (66)
        on left: 37 38 39
        on right: 33
    primitive <expr> (67)
        on left: 40 41 42 43
        on right: 37
    lvalue (68)
        on left: 44
        on right: 39
    suffix (69)
        on left: 45 46 47
        on right: 44
    call_suffix (70)
        on left: 48 49
        on right: 45
    subscript_list (71)
        on left: 50 51
        on right: 46 51
    subscript (72)
        on left: 52
        on right: 50 51
    lor_expr (73)
        on left: 53 54
        on right: 27 54
    land_expr (74)
        on left: 55 56
        on right: 53 54 56
    eq_expr (75)
        on left: 57 58 59
        on right: 55 56 58 59
    rel_expr (76)
        on left: 60 61 62 63 64
        on right: 57 58 59 61 62 63 64
    add_expr (77)
        on left: 65 66 67
        on right: 60 61 62 63 64 66 67
    mult_expr (78)
        on left: 68 69 70 71
        on right: 65 66 67 69 70 71
    exp_expr (79)
        on left: 72 73
        on right: 68 69 70 71 73
    select_stmt (80)
        on left: 74 75
        on right: 22
    iter_stmt (81)
        on left: 76 77 78 79 80 81 82 83 84 85 86 87 88
        on right: 19
    jump_stmt (82)
        on left: 89 90
        on right: 20
    block_stmt (83)
        on left: 91 92
        on right: 21 98
    block_list (84)
        on left: 93 94
        on right: 92 94
    block (85)
        on left: 95 96
        on right: 93 94
    function_decl (86)
        on left: 97 98
        on right: 16
    param_list (87)
        on left: 99 100 101
        on right: 97 98
    params (88)
        on left: 102 103
        on right: 99 102
    param (89)
        on left: 104
        on right: 102 103
    param_type (90)
        on left: 105 106
        on right: 104
    type (91)
        on left: 107 108 109
        on right: 7 8 105
    function_type (92)
        on left: 110
        on right: 106 112 120
    array_type (93)
        on left: 111 112
        on right: 108 119
    primitive_type (94)
        on left: 113 114 115 116
        on right: 107 111 117
    ret_type (95)
        on left: 117 118 119 120
        on right: 97 98 110
    array_list (96)
        on left: 121 122
        on right: 108 119 122
    array (97)
        on left: 123 124
        on right: 121 122


State 0

    0 $accept: . program $end

    TOKEN_EOF    shift, and go to state 1
    TOKEN_IDENT  shift, and go to state 2
    TOKEN_MOD    shift, and go to state 3
    TOKEN_LPAR   shift, and go to state 4

    program        go to state 5
    decl           go to state 6
    name           go to state 7
    ext_decl       go to state 8
    function_decl  go to state 9


State 1

    4 program: TOKEN_EOF .

    $default  reduce using rule 4 (program)


State 2

   13 name: TOKEN_IDENT .

    $default  reduce using rule 13 (name)


State 3

    3 program: TOKEN_MOD . TOKEN_MOD test_program

    TOKEN_MOD  shift, and go to state 10


State 4

   14 name: TOKEN_LPAR . name TOKEN_RPAR

    TOKEN_IDENT  shift, and go to state 2
    TOKEN_LPAR   shift, and go to state 4

    name  go to state 11


State 5

    0 $accept: program . $end
    2 program: program . ext_decl

    $end         shift, and go to state 12
    TOKEN_IDENT  shift, and go to state 2
    TOKEN_LPAR   shift, and go to state 4

    decl           go to state 6
    name           go to state 7
    ext_decl       go to state 13
    function_decl  go to state 9


State 6

   15 ext_decl: decl .

    $default  reduce using rule 15 (ext_decl)


State 7

    7 decl: name . TOKEN_COLON type TOKEN_SEMI
    8     | name . TOKEN_COLON type TOKEN_ASSIGN init TOKEN_SEMI
   97 function_decl: name . TOKEN_COLON ret_type TOKEN_LPAR param_list TOKEN_RPAR TOKEN_SEMI
   98              | name . TOKEN_COLON ret_type TOKEN_LPAR param_list TOKEN_RPAR TOKEN_ASSIGN block_stmt

    TOKEN_COLON  shift, and go to state 14


State 8

    1 program: ext_decl .

    $default  reduce using rule 1 (program)


State 9

   16 ext_decl: function_decl .

    $default  reduce using rule 16 (ext_decl)


State 10

    3 program: TOKEN_MOD TOKEN_MOD . test_program

    TOKEN_FOR     shift, and go to state 15
    TOKEN_IF      shift, and go to state 16
    TOKEN_PRINT   shift, and go to state 17
    TOKEN_RETURN  shift, and go to state 18
    TOKEN_WHILE   shift, and go to state 19
    TOKEN_IDENT   shift, and go to state 2
    TOKEN_BOOL    shift, and go to state 20
    TOKEN_NUMBER  shift, and go to state 21
    TOKEN_STR     shift, and go to state 22
    TOKEN_CH      shift, and go to state 23
    TOKEN_SUB     shift, and go to state 24
    TOKEN_NOT     shift, and go to state 25
    TOKEN_ADD     shift, and go to state 26
    TOKEN_LPAR    shift, and go to state 27
    TOKEN_LCURL   shift, and go to state 28

    test_program   go to state 29
    decl           go to state 6
    name           go to state 30
    ext_decl       go to state 31
    stmt           go to state 32
    print_stmt     go to state 33
    expr_stmt      go to state 34
    expr           go to state 35
    assign_expr    go to state 36
    unary_expr     go to state 37
    postfix_expr   go to state 38
    primary_expr   go to state 39
    primitive      go to state 40
    lvalue         go to state 41
    lor_expr       go to state 42
    land_expr      go to state 43
    eq_expr        go to state 44
    rel_expr       go to state 45
    add_expr       go to state 46
    mult_expr      go to state 47
    exp_expr       go to state 48
    select_stmt    go to state 49
    iter_stmt      go to state 50
    jump_stmt      go to state 51
    block_stmt     go to state 52
    function_decl  go to state 9


State 11

   14 name: TOKEN_LPAR name . TOKEN_RPAR

    TOKEN_RPAR  shift, and go to state 53


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 program: program ext_decl .

    $default  reduce using rule 2 (program)


State 14

    7 decl: name TOKEN_COLON . type TOKEN_SEMI
    8     | name TOKEN_COLON . type TOKEN_ASSIGN init TOKEN_SEMI
   97 function_decl: name TOKEN_COLON . ret_type TOKEN_LPAR param_list TOKEN_RPAR TOKEN_SEMI
   98              | name TOKEN_COLON . ret_type TOKEN_LPAR param_list TOKEN_RPAR TOKEN_ASSIGN block_stmt

    TOKEN_ARRAY     shift, and go to state 54
    TOKEN_AUTO      shift, and go to state 55
    TOKEN_BOOLEAN   shift, and go to state 56
    TOKEN_CHAR      shift, and go to state 57
    TOKEN_FUNCTION  shift, and go to state 58
    TOKEN_INTEGER   shift, and go to state 59
    TOKEN_STRING    shift, and go to state 60
    TOKEN_VOID      shift, and go to state 61

    type            go to state 62
    function_type   go to state 63
    primitive_type  go to state 64
    ret_type        go to state 65
    array_list      go to state 66
    array           go to state 67


State 15

   77 iter_stmt: TOKEN_FOR . TOKEN_LPAR TOKEN_SEMI TOKEN_SEMI TOKEN_RPAR stmt
   78          | TOKEN_FOR . TOKEN_LPAR TOKEN_SEMI TOKEN_SEMI expr TOKEN_RPAR stmt
   79          | TOKEN_FOR . TOKEN_LPAR TOKEN_SEMI expr_stmt TOKEN_RPAR stmt
   80          | TOKEN_FOR . TOKEN_LPAR TOKEN_SEMI expr_stmt expr TOKEN_RPAR stmt
   81          | TOKEN_FOR . TOKEN_LPAR expr_stmt TOKEN_SEMI TOKEN_RPAR stmt
   82          | TOKEN_FOR . TOKEN_LPAR expr_stmt TOKEN_SEMI expr TOKEN_RPAR stmt
   83          | TOKEN_FOR . TOKEN_LPAR expr_stmt expr_stmt TOKEN_RPAR stmt
   84          | TOKEN_FOR . TOKEN_LPAR expr_stmt expr_stmt expr TOKEN_RPAR stmt
   85          | TOKEN_FOR . TOKEN_LPAR decl TOKEN_SEMI TOKEN_RPAR stmt
   86          | TOKEN_FOR . TOKEN_LPAR decl TOKEN_SEMI expr TOKEN_RPAR stmt
   87          | TOKEN_FOR . TOKEN_LPAR decl expr_stmt TOKEN_RPAR stmt
   88          | TOKEN_FOR . TOKEN_LPAR decl expr_stmt expr TOKEN_RPAR stmt

    TOKEN_LPAR  shift, and go to state 68


State 16

   74 select_stmt: TOKEN_IF . TOKEN_LPAR expr TOKEN_RPAR stmt
   75            | TOKEN_IF . TOKEN_LPAR expr TOKEN_RPAR stmt TOKEN_ELSE stmt

    TOKEN_LPAR  shift, and go to state 69


State 17

   23 print_stmt: TOKEN_PRINT . expr TOKEN_SEMI

    TOKEN_IDENT   shift, and go to state 2
    TOKEN_BOOL    shift, and go to state 20
    TOKEN_NUMBER  shift, and go to state 21
    TOKEN_STR     shift, and go to state 22
    TOKEN_CH      shift, and go to state 23
    TOKEN_SUB     shift, and go to state 24
    TOKEN_NOT     shift, and go to state 25
    TOKEN_ADD     shift, and go to state 26
    TOKEN_LPAR    shift, and go to state 27

    name          go to state 70
    expr          go to state 71
    assign_expr   go to state 36
    unary_expr    go to state 37
    postfix_expr  go to state 38
    primary_expr  go to state 39
    primitive     go to state 40
    lvalue        go to state 41
    lor_expr      go to state 42
    land_expr     go to state 43
    eq_expr       go to state 44
    rel_expr      go to state 45
    add_expr      go to state 46
    mult_expr     go to state 47
    exp_expr      go to state 48


State 18

   89 jump_stmt: TOKEN_RETURN . TOKEN_SEMI
   90          | TOKEN_RETURN . expr TOKEN_SEMI

    TOKEN_IDENT   shift, and go to state 2
    TOKEN_BOOL    shift, and go to state 20
    TOKEN_NUMBER  shift, and go to state 21
    TOKEN_STR     shift, and go to state 22
    TOKEN_CH      shift, and go to state 23
    TOKEN_SUB     shift, and go to state 24
    TOKEN_NOT     shift, and go to state 25
    TOKEN_ADD     shift, and go to state 26
    TOKEN_LPAR    shift, and go to state 27
    TOKEN_SEMI    shift, and go to state 72

    name          go to state 70
    expr          go to state 73
    assign_expr   go to state 36
    unary_expr    go to state 37
    postfix_expr  go to state 38
    primary_expr  go to state 39
    primitive     go to state 40
    lvalue        go to state 41
    lor_expr      go to state 42
    land_expr     go to state 43
    eq_expr       go to state 44
    rel_expr      go to state 45
    add_expr      go to state 46
    mult_expr     go to state 47
    exp_expr      go to state 48


State 19

   76 iter_stmt: TOKEN_WHILE . TOKEN_LPAR expr TOKEN_RPAR stmt

    TOKEN_LPAR  shift, and go to state 74


State 20

   40 primitive: TOKEN_BOOL .

    $default  reduce using rule 40 (primitive)


State 21

   42 primitive: TOKEN_NUMBER .

    $default  reduce using rule 42 (primitive)


State 22

   43 primitive: TOKEN_STR .

    $default  reduce using rule 43 (primitive)


State 23

   41 primitive: TOKEN_CH .

    $default  reduce using rule 41 (primitive)


State 24

   32 unary_expr: TOKEN_SUB . unary_expr

    TOKEN_IDENT   shift, and go to state 2
    TOKEN_BOOL    shift, and go to state 20
    TOKEN_NUMBER  shift, and go to state 21
    TOKEN_STR     shift, and go to state 22
    TOKEN_CH      shift, and go to state 23
    TOKEN_SUB     shift, and go to state 24
    TOKEN_NOT     shift, and go to state 25
    TOKEN_ADD     shift, and go to state 26
    TOKEN_LPAR    shift, and go to state 27

    name          go to state 70
    unary_expr    go to state 75
    postfix_expr  go to state 38
    primary_expr  go to state 39
    primitive     go to state 40
    lvalue        go to state 41


State 25

   31 unary_expr: TOKEN_NOT . unary_expr

    TOKEN_IDENT   shift, and go to state 2
    TOKEN_BOOL    shift, and go to state 20
    TOKEN_NUMBER  shift, and go to state 21
    TOKEN_STR     shift, and go to state 22
    TOKEN_CH      shift, and go to state 23
    TOKEN_SUB     shift, and go to state 24
    TOKEN_NOT     shift, and go to state 25
    TOKEN_ADD     shift, and go to state 26
    TOKEN_LPAR    shift, and go to state 27

    name          go to state 70
    unary_expr    go to state 76
    postfix_expr  go to state 38
    primary_expr  go to state 39
    primitive     go to state 40
    lvalue        go to state 41


State 26

   30 unary_expr: TOKEN_ADD . unary_expr

    TOKEN_IDENT   shift, and go to state 2
    TOKEN_BOOL    shift, and go to state 20
    TOKEN_NUMBER  shift, and go to state 21
    TOKEN_STR     shift, and go to state 22
    TOKEN_CH      shift, and go to state 23
    TOKEN_SUB     shift, and go to state 24
    TOKEN_NOT     shift, and go to state 25
    TOKEN_ADD     shift, and go to state 26
    TOKEN_LPAR    shift, and go to state 27

    name          go to state 70
    unary_expr    go to state 77
    postfix_expr  go to state 38
    primary_expr  go to state 39
    primitive     go to state 40
    lvalue        go to state 41


State 27

   14 name: TOKEN_LPAR . name TOKEN_RPAR
   38 primary_expr: TOKEN_LPAR . expr TOKEN_RPAR

    TOKEN_IDENT   shift, and go to state 2
    TOKEN_BOOL    shift, and go to state 20
    TOKEN_NUMBER  shift, and go to state 21
    TOKEN_STR     shift, and go to state 22
    TOKEN_CH      shift, and go to state 23
    TOKEN_SUB     shift, and go to state 24
    TOKEN_NOT     shift, and go to state 25
    TOKEN_ADD     shift, and go to state 26
    TOKEN_LPAR    shift, and go to state 27

    name          go to state 78
    expr          go to state 79
    assign_expr   go to state 36
    unary_expr    go to state 37
    postfix_expr  go to state 38
    primary_expr  go to state 39
    primitive     go to state 40
    lvalue        go to state 41
    lor_expr      go to state 42
    land_expr     go to state 43
    eq_expr       go to state 44
    rel_expr      go to state 45
    add_expr      go to state 46
    mult_expr     go to state 47
    exp_expr      go to state 48


State 28

   91 block_stmt: TOKEN_LCURL . TOKEN_RCURL
   92           | TOKEN_LCURL . block_list TOKEN_RCURL

    TOKEN_FOR     shift, and go to state 15
    TOKEN_IF      shift, and go to state 16
    TOKEN_PRINT   shift, and go to state 17
    TOKEN_RETURN  shift, and go to state 18
    TOKEN_WHILE   shift, and go to state 19
    TOKEN_IDENT   shift, and go to state 2
    TOKEN_BOOL    shift, and go to state 20
    TOKEN_NUMBER  shift, and go to state 21
    TOKEN_STR     shift, and go to state 22
    TOKEN_CH      shift, and go to state 23
    TOKEN_SUB     shift, and go to state 24
    TOKEN_NOT     shift, and go to state 25
    TOKEN_ADD     shift, and go to state 26
    TOKEN_LPAR    shift, and go to state 27
    TOKEN_LCURL   shift, and go to state 28
    TOKEN_RCURL   shift, and go to state 80

    decl          go to state 81
    name          go to state 82
    stmt          go to state 83
    print_stmt    go to state 33
    expr_stmt     go to state 34
    expr          go to state 35
    assign_expr   go to state 36
    unary_expr    go to state 37
    postfix_expr  go to state 38
    primary_expr  go to state 39
    primitive     go to state 40
    lvalue        go to state 41
    lor_expr      go to state 42
    land_expr     go to state 43
    eq_expr       go to state 44
    rel_expr      go to state 45
    add_expr      go to state 46
    mult_expr     go to state 47
    exp_expr      go to state 48
    select_stmt   go to state 49
    iter_stmt     go to state 50
    jump_stmt     go to state 51
    block_stmt    go to state 52
    block_list    go to state 84
    block         go to state 85


State 29

    3 program: TOKEN_MOD TOKEN_MOD test_program .

    $default  reduce using rule 3 (program)


State 30

    7 decl: name . TOKEN_COLON type TOKEN_SEMI
    8     | name . TOKEN_COLON type TOKEN_ASSIGN init TOKEN_SEMI
   44 lvalue: name . suffix
   97 function_decl: name . TOKEN_COLON ret_type TOKEN_LPAR param_list TOKEN_RPAR TOKEN_SEMI
   98              | name . TOKEN_COLON ret_type TOKEN_LPAR param_list TOKEN_RPAR TOKEN_ASSIGN block_stmt

    TOKEN_LBRACK  shift, and go to state 86
    TOKEN_LPAR    shift, and go to state 87
    TOKEN_COLON   shift, and go to state 14

    TOKEN_LPAR  [reduce using rule 47 (suffix)]
    $default    reduce using rule 47 (suffix)

    suffix          go to state 88
    call_suffix     go to state 89
    subscript_list  go to state 90
    subscript       go to state 91


State 31

    6 test_program: ext_decl .

    $default  reduce using rule 6 (test_program)


State 32

    5 test_program: stmt .

    $default  reduce using rule 5 (test_program)


State 33

   17 stmt: print_stmt .

    $default  reduce using rule 17 (stmt)


State 34

   18 stmt: expr_stmt .

    $default  reduce using rule 18 (stmt)


State 35

   24 expr_stmt: expr . TOKEN_SEMI
   26 expr: expr . TOKEN_COMMA assign_expr

    TOKEN_SEMI   shift, and go to state 92
    TOKEN_COMMA  shift, and go to state 93


State 36

   25 expr: assign_expr .

    $default  reduce using rule 25 (expr)


State 37

   28 assign_expr: unary_expr . TOKEN_ASSIGN assign_expr
   72 exp_expr: unary_expr .
   73         | unary_expr . TOKEN_EXP exp_expr

    TOKEN_EXP     shift, and go to state 94
    TOKEN_ASSIGN  shift, and go to state 95

    $default  reduce using rule 72 (exp_expr)


State 38

   29 unary_expr: postfix_expr .
   34 postfix_expr: postfix_expr . TOKEN_LPAR expr TOKEN_RPAR
   35             | postfix_expr . TOKEN_INC
   36             | postfix_expr . TOKEN_DEC

    TOKEN_INC   shift, and go to state 96
    TOKEN_DEC   shift, and go to state 97
    TOKEN_LPAR  shift, and go to state 98

    $default  reduce using rule 29 (unary_expr)


State 39

   33 postfix_expr: primary_expr .

    $default  reduce using rule 33 (postfix_expr)


State 40

   37 primary_expr: primitive .

    $default  reduce using rule 37 (primary_expr)


State 41

   39 primary_expr: lvalue .

    $default  reduce using rule 39 (primary_expr)


State 42

   27 assign_expr: lor_expr .
   54 lor_expr: lor_expr . TOKEN_OR land_expr

    TOKEN_OR  shift, and go to state 99

    $default  reduce using rule 27 (assign_expr)


State 43

   53 lor_expr: land_expr .
   56 land_expr: land_expr . TOKEN_AND eq_expr

    TOKEN_AND  shift, and go to state 100

    $default  reduce using rule 53 (lor_expr)


State 44

   55 land_expr: eq_expr .
   58 eq_expr: eq_expr . TOKEN_EQ rel_expr
   59        | eq_expr . TOKEN_NEQ rel_expr

    TOKEN_EQ   shift, and go to state 101
    TOKEN_NEQ  shift, and go to state 102

    $default  reduce using rule 55 (land_expr)


State 45

   57 eq_expr: rel_expr .
   61 rel_expr: rel_expr . TOKEN_LESS add_expr
   62         | rel_expr . TOKEN_GREAT add_expr
   63         | rel_expr . TOKEN_LEQ add_expr
   64         | rel_expr . TOKEN_GEQ add_expr

    TOKEN_LEQ    shift, and go to state 103
    TOKEN_LESS   shift, and go to state 104
    TOKEN_GEQ    shift, and go to state 105
    TOKEN_GREAT  shift, and go to state 106

    $default  reduce using rule 57 (eq_expr)


State 46

   60 rel_expr: add_expr .
   66 add_expr: add_expr . TOKEN_ADD mult_expr
   67         | add_expr . TOKEN_SUB mult_expr

    TOKEN_SUB  shift, and go to state 107
    TOKEN_ADD  shift, and go to state 108

    $default  reduce using rule 60 (rel_expr)


State 47

   65 add_expr: mult_expr .
   69 mult_expr: mult_expr . TOKEN_MULT exp_expr
   70          | mult_expr . TOKEN_DIV exp_expr
   71          | mult_expr . TOKEN_MOD exp_expr

    TOKEN_MULT  shift, and go to state 109
    TOKEN_DIV   shift, and go to state 110
    TOKEN_MOD   shift, and go to state 111

    $default  reduce using rule 65 (add_expr)


State 48

   68 mult_expr: exp_expr .

    $default  reduce using rule 68 (mult_expr)


State 49

   22 stmt: select_stmt .

    $default  reduce using rule 22 (stmt)


State 50

   19 stmt: iter_stmt .

    $default  reduce using rule 19 (stmt)


State 51

   20 stmt: jump_stmt .

    $default  reduce using rule 20 (stmt)


State 52

   21 stmt: block_stmt .

    $default  reduce using rule 21 (stmt)


State 53

   14 name: TOKEN_LPAR name TOKEN_RPAR .

    $default  reduce using rule 14 (name)


State 54

  123 array: TOKEN_ARRAY . TOKEN_LBRACK assign_expr TOKEN_RBRACK
  124      | TOKEN_ARRAY . TOKEN_LBRACK TOKEN_RBRACK

    TOKEN_LBRACK  shift, and go to state 112


State 55

  109 type: TOKEN_AUTO .

    $default  reduce using rule 109 (type)


State 56

  113 primitive_type: TOKEN_BOOLEAN .

    $default  reduce using rule 113 (primitive_type)


State 57

  114 primitive_type: TOKEN_CHAR .

    $default  reduce using rule 114 (primitive_type)


State 58

  110 function_type: TOKEN_FUNCTION . ret_type

    TOKEN_ARRAY     shift, and go to state 54
    TOKEN_BOOLEAN   shift, and go to state 56
    TOKEN_CHAR      shift, and go to state 57
    TOKEN_FUNCTION  shift, and go to state 58
    TOKEN_INTEGER   shift, and go to state 59
    TOKEN_STRING    shift, and go to state 60
    TOKEN_VOID      shift, and go to state 61

    function_type   go to state 63
    primitive_type  go to state 113
    ret_type        go to state 114
    array_list      go to state 115
    array           go to state 67


State 59

  115 primitive_type: TOKEN_INTEGER .

    $default  reduce using rule 115 (primitive_type)


State 60

  116 primitive_type: TOKEN_STRING .

    $default  reduce using rule 116 (primitive_type)


State 61

  118 ret_type: TOKEN_VOID .

    $default  reduce using rule 118 (ret_type)


State 62

    7 decl: name TOKEN_COLON type . TOKEN_SEMI
    8     | name TOKEN_COLON type . TOKEN_ASSIGN init TOKEN_SEMI

    TOKEN_ASSIGN  shift, and go to state 116
    TOKEN_SEMI    shift, and go to state 117


State 63

  120 ret_type: function_type .

    $default  reduce using rule 120 (ret_type)


State 64

  107 type: primitive_type .
  117 ret_type: primitive_type .

    TOKEN_LPAR  reduce using rule 117 (ret_type)
    $default    reduce using rule 107 (type)


State 65

   97 function_decl: name TOKEN_COLON ret_type . TOKEN_LPAR param_list TOKEN_RPAR TOKEN_SEMI
   98              | name TOKEN_COLON ret_type . TOKEN_LPAR param_list TOKEN_RPAR TOKEN_ASSIGN block_stmt

    TOKEN_LPAR  shift, and go to state 118


State 66

  108 type: array_list . array_type
  119 ret_type: array_list . array_type
  122 array_list: array_list . array

    TOKEN_ARRAY     shift, and go to state 54
    TOKEN_BOOLEAN   shift, and go to state 56
    TOKEN_CHAR      shift, and go to state 57
    TOKEN_FUNCTION  shift, and go to state 58
    TOKEN_INTEGER   shift, and go to state 59
    TOKEN_STRING    shift, and go to state 60

    function_type   go to state 119
    array_type      go to state 120
    primitive_type  go to state 121
    array           go to state 122


State 67

  121 array_list: array .

    $default  reduce using rule 121 (array_list)


State 68
